enable_testing()
find_package(GTest QUIET)
if(GTest_FOUND)
    include_directories(${GTEST_INCLUDE_DIRS})
    add_executable(storage_test storage_test.cc)
    add_executable(threaded_engine_test threaded_engine_test.cc)
    target_link_libraries(storage_test mxnet)
    target_link_libraries(threaded_engine_test mxnet)
endif()